[gd_scene load_steps=18 format=2]

[ext_resource path="res://theme/generic_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://ui_helpers/full_window_file_dialog.gd" type="Script" id=2]
[ext_resource path="res://main_ui/source_images/source_images.gd" type="Script" id=3]
[ext_resource path="res://fonts/labels.tres" type="DynamicFont" id=4]
[ext_resource path="res://theme/edg8.theme" type="Theme" id=5]
[ext_resource path="res://main_ui/busy_indicator.png" type="Texture" id=6]
[ext_resource path="res://main_ui/output_params/output_params.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "spinning",
"speed": 12.0
} ]

[node name="SourceImages" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
choose_files_dialog = NodePath("ChooseFilesDialog")
item_list = NodePath("SourceImages/ItemList")
remove_file_btn = NodePath("SourceImages/ListControls/RemoveFile")
busy_indicator = NodePath("SourceImages/BusyIndicator")

[node name="ChooseFilesDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Select File(s) to Convert"
mode_overrides_title = false
mode = 1
access = 2
filters = PoolStringArray( "*.png ; PNG Image", "*.jpg ; JPG Image", "*.bmp ; BMP Image", "*.dds ; DDS Image", "*.exr ; OpenEXR Image", "*.hdr ; Radiance HDR Image", "*.tga ; Targa Image", "*.webp ; WebP Image" )
current_dir = "/Projects/Godot/Utilities/PIXELVEC/Project"
current_path = "/Projects/Godot/Utilities/PIXELVEC/Project/"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceImages" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 433.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BusyIndicator" type="AnimatedSprite" parent="SourceImages"]
position = Vector2( 15, 18 )
frames = SubResource( 10 )
animation = "idle"

[node name="ListControls" type="HBoxContainer" parent="SourceImages"]
margin_right = 428.0
margin_bottom = 37.0
alignment = 2

[node name="Spacer" type="Control" parent="SourceImages/ListControls"]
margin_right = 276.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SourceImages/ListControls"]
margin_left = 280.0
margin_right = 360.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.827451, 0.152941, 0.203922, 1 )
text = "Images"
align = 1
uppercase = true

[node name="AddFiles" type="Button" parent="SourceImages/ListControls"]
margin_left = 364.0
margin_right = 394.0
margin_bottom = 37.0
hint_tooltip = "Add more images to convert."
text = "ADD"

[node name="RemoveFile" type="Button" parent="SourceImages/ListControls"]
margin_left = 398.0
margin_right = 428.0
margin_bottom = 37.0
hint_tooltip = "Remove the selected image(s) from the conversion list."
disabled = true
text = "DEL"

[node name="ItemList" type="ItemList" parent="SourceImages"]
margin_top = 41.0
margin_right = 428.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputParams" parent="SourceImages" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 497.0
margin_right = 428.0
margin_bottom = 590.0
[connection signal="file_selected" from="ChooseFilesDialog" to="." method="_on_ChooseFilesDialog_file_selected"]
[connection signal="files_selected" from="ChooseFilesDialog" to="." method="_on_ChooseFilesDialog_files_selected"]
[connection signal="pressed" from="SourceImages/ListControls/AddFiles" to="." method="_on_AddFiles_pressed"]
[connection signal="pressed" from="SourceImages/ListControls/RemoveFile" to="." method="_on_RemoveFile_pressed"]
[connection signal="item_selected" from="SourceImages/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="multi_selected" from="SourceImages/ItemList" to="." method="_on_ItemList_multi_selected"]
[connection signal="nothing_selected" from="SourceImages/ItemList" to="." method="_on_ItemList_nothing_selected"]
